--- a/patient-up/src/main/resources/application.properties
+++ b/patient-up/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.h2.console.enabled=true
 
